--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <strong>We're sorry but Polymat AI doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
   </body>
 </html>
